Fix alignment on mobile #day21

--- a/src/style/days/day21.scss
+++ b/src/style/days/day21.scss
@@ -99,12 +99,12 @@ $duration: 1.5s;
   }
 
   .sides {
-    height: 40%;
+    height: 160px;
     left: 50%;
     position: absolute;
     top: 50%;
     transform: translate(-50%, -50%);
-    width: 40%;
+    width: 160px;
     z-index: 2;
   }
 
